--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   </div>
 </section>
 
-
+<!-- 
 <section class="section">
   <div class="container is-max-desktop">
 
@@ -343,32 +343,32 @@
             <p>Start Frame</p>
           </div>
           <div class="column interpolation-video-column">
-            <div id="interpolation-image-wrapper">
+<!--             <div id="interpolation-image-wrapper">
               Loading...
-            </div>
+            </div> -->
             <input class="slider is-fullwidth is-large is-info"
                    id="interpolation-slider"
                    step="1" min="0" max="100" value="0" type="range">
-          </div>
+<!--           </div>
           <div class="column is-3 has-text-centered">
             <img src="./static/images/interpolate_end.jpg"
                  class="interpolation-image"
                  alt="Interpolation end reference image."/>
             <p class="is-bold">End Frame</p>
-          </div>
+          </div> -->
         </div>
         <br/>
         <!--/ Interpolating. -->
 
         <!-- Re-rendering. -->
         <h3 class="title is-4">Re-rendering the input video</h3>
-        <div class="content has-text-justified">
+<!--         <div class="content has-text-justified">
           <p>
             Using <span class="dnerf">Nerfies</span>, you can re-render a video from a novel
             viewpoint such as a stabilized camera by playing back the training deformations.
           </p>
-        </div>
-        <div class="content has-text-centered">
+        </div> -->
+<!--         <div class="content has-text-centered">
           <video id="replay-video"
                  controls
                  muted
@@ -378,7 +378,7 @@
             <source src="./static/videos/replay.mp4"
                     type="video/mp4">
           </video>
-        </div>
+        </div> -->
         <!--/ Re-rendering. -->
 
       </div>
@@ -415,7 +415,7 @@
 
   </div>
 </section>
-
+ -->
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
