--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
-  <link rel="icon" href="./static/images/icon.svg">
+  <link rel="icon" href="./static/images/favicon.svg">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script defer src="./static/js/fontawesome.all.min.js"></script>
@@ -54,7 +54,8 @@
     <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
       <a class="navbar-item" href="https://www.adelresearchgroup.org/">
       <span class="icon">
-          <i class="fas fa-home"></i>
+        <img src="static/images/favicon.svg" alt="Home" style="height: 1.5rem; width: auto;">
+          <!-- <i class="fas fa-home"></i> -->
       </span>
       </a>
 
@@ -91,14 +92,14 @@
           <h1 class="title is-1 publication-title">Feedback-driven adaptive multi-robot timber construction </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://www.adelresearchgroup.org/team/arashadel">Arash Adel</a><sup>a,b</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=IgVwlIcAAAAJ&hl=en&oi=ao">Arash Adel</a><sup>a,b,*</sup>,</span>
             <span class="author-block">
-              <a href="https://www.adelresearchgroup.org/team/danielruan">Daniel Ruan</a><sup>a,b</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=9vopSH0AAAAJ&hl=en">Daniel Ruan</a><sup>a,b</sup>,</span>
             <span class="author-block">
-              <a href="https://taubmancollege.umich.edu/faculty/directory/wesley-mcgee/">Wesley McGee</a><sup>b</sup>,
+              <a href="https://scholar.google.com/citations?user=-d7pwn4AAAAJ&hl=en&oi=ao">Wesley McGee</a><sup>b</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.adelresearchgroup.org/team/salmamozaffari">Salma Mozaffari</a><sup>a,b</sup>,
+              <a href="https://scholar.google.com/citations?user=bCqEHLsAAAAJ&hl=en">Salma Mozaffari</a><sup>a,b</sup>,
             </span>
 <!--             <span class="author-block">
               <a href="https://www.danbgoldman.com">Dan B Goldman</a><sup>2</sup>,
@@ -112,7 +113,8 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>a</sup>Princeton University, Princeton, NJ 08544, USA</span>
+            <span class="author-block"><sup>*</sup>corresponding author</span><br>
+            <span class="author-block"><sup>a</sup>Princeton University, Princeton, NJ 08544, USA</span><br>
             <span class="author-block"><sup>b</sup>University of Michigan, Ann Arbor, MI 48109, USA</span>
           </div>
 
@@ -171,9 +173,16 @@
           </div>
         </div>
       </div>
+      <div class="has-text-centered" style="margin-top: 2rem;">
+  <img src="static/images/logos.png" alt="Logo" style="height: 60px; width: auto;">
+</div>
     </div>
   </div>
 </section>
+
+
+
+
 
 <!-- <section class="hero teaser">
   <div class="container is-max-desktop">
@@ -252,6 +261,20 @@
 
 <section class="section">
   <div class="container is-max-desktop">
+    <!-- Paper video. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <!-- <h2 class="title is-3">Video</h2> -->
+        <div class="publication-video">
+          <iframe src="https://www.youtube.com/embed/17SX5MXv6mo?rel=0&amp;showinfo=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+    <!--/ Paper video. -->
+
+
+
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -266,7 +289,7 @@
     <!--/ Abstract. -->
 
     <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
+<!--     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
@@ -274,13 +297,65 @@
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--/ Paper video. -->
   </div>
 </section>
 
 
  -->
+
+
+
+<section class="section">
+  <div class="container is-max-desktop">
+
+    <div class="columns is-centered">
+
+
+    <!-- Concurrent Work. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Related Links</h2>
+
+        <div class="content has-text-justified">
+          <p>
+          This research was supported by the National Science Foundation (NSF, Award No. 2128623) and the Taubman College of Architecture and Urban Planning (TCAUP) at the University of Michigan (U-M). Empirical physical prototyping research was conducted at the University of Michigan. The authors would like to thank Rachael Henry for her invaluable support at the TCAUP FABLab.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Concurrent Work. -->
+
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
@@ -301,28 +376,20 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <a class="icon-link"
+<!--       <a class="icon-link"
          href="https://www.sciencedirect.com/science/article/pii/S0926580524001808">
         <i class="fas fa-file-pdf"></i>
-      </a>
-      <a class="icon-link" href="https://www.adelresearchgroup.org/" class="external-link" disabled>
+      </a> -->
+<!--       <a class="icon-link" href="https://www.adelresearchgroup.org/" class="external-link" disabled>
         <i class="fab fa-github"></i>
-      </a>
+      </a> -->
     </div>
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
           <p>
-            This website is licensed under a <a rel="license"
-                                                href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
-            Commons Attribution-ShareAlike 4.0 International License</a>.
-          </p>
-          <p>
-            This means you are free to borrow the <a
-              href="https://github.com/nerfies/nerfies.github.io">source code</a> of this website,
-            we just ask that you link back to this page in the footer.
-            Please remember to remove the analytics code included in the header of the website which
-            you do not want on your website.
+            The website template was adapted from  <a
+              href="https://nerfies.github.io/">Nerfies</a>.
           </p>
         </div>
       </div>
