--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <span>Paper</span>
                 </a>
               </span>
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a href="https://www.sciencedirect.com/science/article/pii/S0926580524001808"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -138,7 +138,7 @@
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Video Link. -->
               <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=17SX5MXv6mo"
@@ -150,7 +150,7 @@
                 </a>
               </span>
               <!-- Code Link. -->
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a href="https://github.com/google/nerfies"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -158,16 +158,16 @@
                   </span>
                   <span>Code</span>
                   </a>
-              </span>
+              </span> -->
               <!-- Dataset Link. -->
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a href="https://github.com/google/nerfies/releases/tag/0.1"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
                   <span>Data</span>
-                  </a>
+                  </a> -->
             </div>
 
           </div>
