--- a/index.html
+++ b/index.html
@@ -266,12 +266,13 @@
       <div class="column is-four-fifths">
         <!-- <h2 class="title is-3">Video</h2> -->
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/17SX5MXv6mo?rel=0&amp;showinfo=0"
+          <iframe src="https://www.youtube.com/embed/Rbo6WDL-p0E?rel=0&amp;showinfo=0"   
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
     <!--/ Paper video. -->
+    <!-- https://youtu.be/Rbo6WDL-p0E -->
 
 
 
@@ -316,7 +317,7 @@
     <!-- Concurrent Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Related Links</h2>
+        <h2 class="title is-3">Acknowledgments</h2>
 
         <div class="content has-text-justified">
           <p>
@@ -367,7 +368,8 @@
   volume={164},
   pages={105444},
   year={2024},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  url={https://doi.org/10.1016/j.autcon.2024.105444}
 }</code></pre>
   </div>
 </section>
