--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </span> -->
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=17SX5MXv6mo"
+                <a href="https://www.youtube.com/watch?v=Rbo6WDL-p0E"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
