--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
       </div>
       <div class="has-text-centered" style="margin-top: 2rem;">
-  <img src="static/images/logos.jpg" alt="Logo" style="height: 60px; width: auto;">
+  <img src="static/images/merged_logos.jpg" alt="Logo" style="height: 60px; width: auto;">
 </div>
     </div>
   </div>
@@ -276,7 +276,7 @@
 
 
     <!-- Abstract. -->
-    <div class="columns is-centered has-text-centered">
+    <div class="columns is-centered has-text-centered" style="background-color: #f5f5f5;">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
