--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
   <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Feedback-driven adaptive multi-robot timber construction </title>
+  <title>Leveraging clay formwork 3D printing for reinforced concrete construction </title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script> -->
@@ -116,8 +116,8 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>*</sup>corresponding author</span><br>
-            <span class="author-block"><sup>a</sup>Princeton University, Princeton, NJ 08544, USA</span><br>
-            <span class="author-block"><sup>b</sup>University of Michigan, Ann Arbor, MI 48109, USA</span><br>
+            <span class="author-block"><sup>a</sup>Princeton University, Princeton, NJ, USA</span><br>
+            <span class="author-block"><sup>b</sup>University of Michigan, Ann Arbor, MI, USA</span><br>
             <span class="author-block"><sup>b</sup>Polytechnic University of Valencia, Valencia, Spain</span>
           </div>
 
@@ -265,15 +265,54 @@
 <section class="section">
   <div class="container is-max-desktop">
     <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered"style="background-color: #ffffff; margin-top: -4rem;">
-      <div class="column">
-        <!-- <h2 class="title is-3">Video</h2> -->
-        <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/Rbo6WDL-p0E?rel=0&amp;showinfo=0"   
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-      </div>
+
+
+<!-- 
+    <div class="columns is-centered has-text-centered" style="background-color: #ffffff; margin-top: -4rem;">
+    <div class="column" style="padding: 0;">
+      <img src="static/images/vid1.gif" alt="First demo" style="width: auto; height: 350px;display: block; margin: 0 auto ;">
     </div>
+    <div class="column">
+      <img src="static/images/vid2.gif" alt="Second demo" style="width: auto; height: 350px;display: block; margin: 0 auto ;">
+    </div>
+    </div> -->
+
+<!-- 
+    <div class="columns is-gapless is-vcentered has-text-centered" style="background-color: #ffffff; margin-top: -4rem;">
+  <div class="column" style="padding: 0;">
+    <img src="static/images/vid1.gif" alt="First demo"
+         style="width: auto; height: 350px; display: inline-block; vertical-align: middle;">
+  </div>
+  <div class="column" style="padding: 0;">
+    <img src="static/images/vid2.gif" alt="Second demo"
+         style="width: auto; height: 350px; display: inline-block; vertical-align: middle;">
+  </div>
+</div> -->
+
+<!-- <div class="columns is-gapless is-vcentered has-text-centered" style="background-color: #ffffff; margin-top: -4rem;">
+  <div class="column" style="padding: 0;">
+    <img src="static/images/vid1.gif" alt="First demo"
+         style="width: auto; height: 350px;margin-right: -89px; display: inline-block; vertical-align: middle;">
+  </div>
+  <div class="column" style="padding: 0;">
+    <img src="static/images/vid2.gif" alt="Second demo"
+         style="width: auto; height: 350px;margin-right: -809px display: inline-block; vertical-align: middle;">
+  </div>
+</div>
+ -->
+
+ <div class="columns is-gapless is-vcentered has-text-centered" style="background-color: #ffffff; margin-top: -4rem;">
+  <div class="column" style="padding: 0;">
+    <img src="static/images/vid1.gif" alt="First demo"
+         style="width: auto; height: 350px; margin-right: -25px; display: inline-block; vertical-align: middle;">
+  </div>
+  <div class="column" style="padding: 0;">
+    <img src="static/images/vid2.gif" alt="Second demo"
+         style="width: auto; height: 350px; margin-right: 500px; display: inline-block; vertical-align: middle;">
+  </div>
+</div>
+
+
     <!--/ Paper video. -->
     <!-- https://youtu.be/Rbo6WDL-p0E -->
 
@@ -342,7 +381,7 @@
               </figcaption>
             </figure>
 
-            We used longitudinal steel rebars to provide bending reinforcement. The rebars have a diameter of 15.9 mm (5/8 inch) with a nominal strength of 414 MPa (60 ksi). To provide shear reinforcement, we utilised brass- coated high carbon steel fibers with surface striations, a length of 6 mm, a diameter of 0.2 mm, and a nominal tensile strength of 2847.5 MPa (413 ksi) from (<b>Fig. 1 (right)</b>).
+            We used longitudinal steel rebars to provide bending reinforcement. The rebars have a diameter of 15.9 mm (5/8 inch) with a nominal strength of 414 MPa (60 ksi). To provide shear reinforcement, we utilised brass-coated high carbon steel fibers with surface striations, a length of 6 mm, a diameter of 0.2 mm, and a nominal tensile strength of 2847.5 MPa (413 ksi) from (<b>Fig. 1 (right)</b>).
           </p>
         </div>
       </div>
@@ -364,7 +403,7 @@
 
         <div class="content has-text-justified">
           <p>
-            <b>Fig. 3</b> shows an overview of the fabrication process. The beams using 3D-printed clay formwork are fabricated vertically; each beam is 1 m long with a rectangular cross-section of 180 m×150 mm and cast using a total of 3.5 retarded batches of 17.9 kg SCC mix. The fabrication of each beam begins with mixing a 17.9 kg batch of retarded concrete and printing the first 5 cm height of clay formwork. After each sequence of clay printing, a small concrete batch mixed with a 2% accelerator is cast into the formwork. The exterior formwork dries, self-demolds, and can be easily picked up after 2-3 days. The internal formwork required 6-7 days to dry and was removed using a long chisel.
+            <b>Fig. 3</b> shows an overview of the fabrication process. The beams using 3D-printed clay formwork are fabricated vertically; each beam is 1 m long with a rectangular cross-section of 180 mm × 150 mm and cast using a total of 3.5 retarded batches of 17.9 kg SCC mix. The fabrication of each beam begins with mixing a 17.9 kg batch of retarded concrete and printing the first 5 cm height of clay formwork. After each sequence of clay printing, a small concrete batch mixed with a 2% accelerator is cast into the formwork. The exterior formwork dries, self-demolds, and can be easily picked up after 2-3 days. The internal formwork required 6-7 days to dry and was removed using a long chisel.
             <figure class="image">
               <img src="static/images/Fig3.png"
                    alt="Fabrication setup"
