--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </a>
               </span> -->
               <!-- Video Link. -->
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=Rbo6WDL-p0E"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -151,7 +151,7 @@
                   </span>
                   <span>Video</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
 <!--               <span class="link-block">
                 <a href="https://github.com/google/nerfies"
@@ -304,11 +304,11 @@
  <div class="columns is-gapless is-vcentered has-text-centered" style="background-color: #ffffff; margin-top: -4rem;">
   <div class="column" style="padding: 0;">
     <img src="static/images/vid1.gif" alt="First demo"
-         style="width: auto; height: 350px; margin-right: -25px; display: inline-block; vertical-align: middle;">
+         style="width: auto; height: 350px; margin-right: -165px; display: inline-block; vertical-align: middle;">
   </div>
   <div class="column" style="padding: 0;">
     <img src="static/images/vid2.gif" alt="Second demo"
-         style="width: auto; height: 350px; margin-right: 500px; display: inline-block; vertical-align: middle;">
+         style="width: auto; height: 350px; margin-right: 580px; display: inline-block; vertical-align: middle;">
   </div>
 </div>
 
