--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <style>
+    * {
+      font-family: 'Inter', sans-serif !important;
+      font-weight: 300;
+    }
+  </style>
+
   <meta charset="utf-8">
   <meta name="description"
         content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
@@ -39,6 +47,7 @@
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
+
 </head>
 <body>
 
@@ -115,10 +124,10 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>*</sup>corresponding author</span><br>
-            <span class="author-block"><sup>a</sup>Princeton University, Princeton, NJ, USA</span><br>
-            <span class="author-block"><sup>b</sup>University of Michigan, Ann Arbor, MI, USA</span><br>
-            <span class="author-block"><sup>b</sup>Polytechnic University of Valencia, Valencia, Spain</span>
+            <span class="author-block" style="font-size: 1.2rem; font-family: 'Inter'"><sup>*</sup>corresponding author: arash.adel@princeton.edu</span><br>
+            <span class="author-block" style="font-size: 1.2rem;"><sup>a</sup>Princeton University, Princeton, NJ, USA</span><br>
+            <span class="author-block" style="font-size: 1.2rem;"><sup>b</sup>University of Michigan, Ann Arbor, MI, USA</span><br>
+            <span class="author-block" style="font-size: 1.2rem;"><sup>b</sup>Polytechnic University of Valencia, Valencia, Spain</span>
           </div>
 
           <div class="column has-text-centered">
@@ -318,10 +327,10 @@
 
 
 
-    <!-- Abstract. -->
+    <!-- Abstract. --> 
     <div class="columns is-centered has-text-centered" style="background-color: #ffffff;margin-top: 3rem;">
       <div class="column">
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3" style="font-size: 1.4rem;">Abstract</h2>
         <div class="content has-text-justified">
           <p>
            Robotic clay formwork three-dimensional printing combined with incremental concrete casting controls concrete’s hydrostatic pressure and enables the production of building-scale structures. Clay formwork is self-demolding and less carbon-intensive than concrete and polymer, which are often used in formwork additive manufacturing. This research investigates the recycling and reuse of clay to re-print formworks and tailors a self-compacting concrete formula with 60% reduced cement content and 90% larger maximum aggregate size. The study then explores integrating steel fibers and longitudinal rebars into the fabrication process to provide shear and bending reinforcement. When comparing the load-bearing behaviour of the fabricated beams against those cast traditionally using wooden formworks, the fabricated beams demonstrated 20% lower load-bearing capacity, with peak load mid-span deflections staying in a similar range. While more investigation is required to address formwork deformations using mixed steel fibers and recycled clay, this research paves the way for more sustainable concrete construction practices.
@@ -356,7 +365,7 @@
     <!-- Concurrent Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Materials</h2>
+        <h2 class="title is-3" style="font-size: 1.4rem;">Materials</h2>
 
         <div class="content has-text-justified">
           <p>
@@ -399,7 +408,7 @@
     <!-- Concurrent Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Fabrication Process</h2>
+        <h2 class="title is-3" style="font-size: 1.4rem;">Fabrication Process</h2>
 
         <div class="content has-text-justified">
           <p>
@@ -440,7 +449,7 @@
     <!-- Concurrent Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Formwork deformation</h2>
+        <h2 class="title is-3" style="font-size: 1.4rem;">Formwork deformation</h2>
 
         <div class="content has-text-justified">
           <p>
@@ -461,7 +470,7 @@
     <!-- Concurrent Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Structural tests</h2>
+        <h2 class="title is-3" style="font-size: 1.4rem;">Structural tests</h2>
 
         <div class="content has-text-justified">
           <p>
@@ -500,7 +509,7 @@
     <!-- Concurrent Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Results</h2>
+        <h2 class="title is-3" style="font-size: 1.4rem;">Results</h2>
 
         <div class="content has-text-justified">
           <p>
@@ -558,7 +567,7 @@
     <!-- Concurrent Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Conclusion</h2>
+        <h2 class="title is-3" style="font-size: 1.4rem;">Conclusion</h2>
 
         <div class="content has-text-justified">
           <p>
@@ -578,12 +587,17 @@
     <!-- Concurrent Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Acknowledgements</h2>
+        <h2 class="title is-3" style="font-size: 1.4rem;">Acknowledgements</h2>
 
         <div class="content has-text-justified">
           <p>
             The physical prototyping and experiments were conducted at the University of Michigan (U-M). We thank Professor Wesley McGee of Taubman College of Architecture and Urban Planning (TCAUP) at the U-M for his input and assistance in developing the robotic setup, including the clay printing end effector. We also thank our research assistants, Daniel Ruan and Alireza Fazel at TCAUP, for making the experiments and documentation of this time-sensitive research possible. We additionally thank Justin Roelofs of the Structural Engineering Lab at the Department of Civil and Environmental Engineering of U-M for assisting with the structural test setup and running the tests.
-
+            <br>
+            <br>
+            <br>
+            <br>
+            Read the full paper here:  <a
+              href="https://www.tandfonline.com/doi/full/10.1080/17452759.2024.2367735">Link</a>.
           </p>
         </div>
       </div>
@@ -611,7 +625,7 @@
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
-    <h2 class="title">BibTeX</h2>
+    <h2 class="title" style="font-size: 1.4rem;">BibTeX</h2>
     <pre><code>@article{mozaffari2024leveraging,
   title={Leveraging clay formwork 3D printing for reinforced concrete construction},
   author={Mozaffari, Salma and Kamravafar, Rahasadat and Li, Yunyan and Mata-Falc{\'o}n, Jaime and Adel, Arash},
