--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
     <!-- Abstract. --> 
     <div class="columns is-centered has-text-centered" style="background-color: #ffffff;margin-top: 3rem;">
-      <div class="column">
+      <div class="column is-full-width">
         <h2 class="title is-3" style="font-size: 1.4rem;">Abstract</h2>
         <div class="content has-text-justified">
           <p>
