--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <meta charset="utf-8">
   <meta name="description"
-        content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+        content="Leveraging clay formwork 3D printing for reinforced concrete construction.">
+  <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Leveraging clay formwork 3D printing for reinforced concrete construction </title>
 
