--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <meta charset="utf-8">
   <meta name="description"
-        content="Leveraging clay formwork 3D printing for reinforced concrete construction.">
+        content="Leveraging clay formwork 3D printing for reinforced concrete construction">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Leveraging clay formwork 3D printing for reinforced concrete construction </title>
